--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="menu-bars" class="fas fa-bars"></div>
       <nav class="navbar">
         <a href="#home">Home</a>
-        <a href="#bout">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#skill">Skills</a>
+        <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -42,6 +42,7 @@
         <a href="#about" class="btn">About me</a>
       </div>
     </section>
+    <hr/>
     <!--Home Section ends here-->
     <!--About me section starts here-->
     <section class="about" id="about">
@@ -146,33 +147,59 @@
 
       <h1 class="heading">my <span>projects</span></h1>
       <div class="container">
-        <div class="box">
+        <div class="box tilt">
           <img src="Images/img-1.png" alt="">
           <div class="content">
-            <a href="#">show code</a>
+            <a href="https://github.com/jaydeep2311/boatproject" class="btn">show code</a>
           </div>
         </div>
-        <div class="box">
+        <div class="box tilt">
           <img src="Images/img-2.png" alt="">
           <div class="content">
-            <a href="#">show code</a>
+            <a href="https://github.com/jaydeep2311/news" class="btn">show code</a>
           </div>
         </div>
-        <div class="box">
+        <div class="box tilt">
           <img src="Images/img-3.png" alt="">
           <div class="content">
-            <a href="#">show code</a>
+            <a href="#" class="btn">show code</a>
           </div>
         </div>
-        <div class="box">
+        <div class="box tilt">
           <img src="Images/img-4.png" alt="">
           <div class="content">
-            <a href="#">show code</a>
+            <a href="#" class="btn">show code</a>
           </div>
         </div>
       </div>
     </section>
     <!--project section ends here-->
+    <!--Contact Me section starts here -->
+    <section class="contact" id="contact">
+      <div class="row">
+        <div class="image">
+        <img src="Images/contact-img.svg" alt="" class="img-contact tilt">
+        </div>
+        <form action="">
+
+          <div class="inputbox">
+            <input type="text" placeholder="name">
+            <input type="email" placeholder="email">
+          </div>
+          <input type="text" placeholder="subject" class="box">
+          <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
+          <input type="submit" name="" id="" class="btn" value="send message">
+        </form>
+      </div>
+    </section>
+    <!--Contact me section ends here -->
+    <!--Footer section starts here -->
+
+    <div class="footer">
+      created by <span>Jaydeep khatri</span>
+      | all rights reserved!
+    </div>
+    <!--Footer section ends here -->
     <!--Javascript part-->
     <!--Typed js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
