--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
           </div>
         </div>
-        <a href="" class="btn">Download CV</a>
+        <a href="https://lasher-test.s3.af-south-1.amazonaws.com/articles/Jaydeep's+Resume+(2).pdf" class="btn" target="__blank">Download CV</a>
       </div>
     </section>
     <!--About me section ends here-->
