--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="home" class="home">
       <div id="particles-js"></div>
       <div class="content">
-        <img src="images/jd-profile-2.jpeg" alt="" class="tilt" />
+        <img src="./Images/WhatsApp Image 2022-04-13 at 1.28.31 PM.jpeg" alt="" class="tilt" />
 
         <h3>Khatri <span>Jaydeep</span></h3>
         <p>I am a <span class="typingtext">Full Stack Web developer</span></p>
@@ -125,15 +125,18 @@
         <div class="box tilt">
           <div class="pro-box">
           <img src="Images/img-1.png" alt="">
-          <div class="p-content">Project Name: <span> BoAt Clone </span>
+          <div class="p-content"> <span> BoAt Clone </span>
             <br/>
             <br/>
             <br/>
-            Tech stack: <span> Html,Css,Javascript</span>
+             <span ><i class="fab fa-html5 tech-icons"></i>
+              <i class="fab fa-css3-alt tech-icons"></i>
+              <i class="fab fa-js tech-icons"></i>
+            </span>
             <br/>
         <br/>
         <br/>
-            Description:  <span> Its an clone website of Boat lifestyle webapp its an mini ecommerce website. I have used Html css and javascript for functionality  </span>
+           <span> Its an clone website of Boat lifestyle webapp its an mini ecommerce website. I have used Html css and javascript for functionality  </span>
          </div>
         </div>
           <div class="content">
@@ -144,15 +147,19 @@
         <div class="box tilt">
           <div class="pro-box">
           <img src="Images/img-2.png" alt="">
-          <div class="p-content" >Project Name: <span> News Webapp </span>
+          <div class="p-content" ><span> News Webapp </span>
             <br/>
             <br/>
             <br/>
-            Tech stack: <span> Html,Css,Javascript,Reactjs</span>
+            <span> <span ><i class="fab fa-html5 tech-icons"></i>
+              <i class="fab fa-css3-alt tech-icons"></i>
+              <i class="fab fa-js tech-icons"></i>
+              <i class="fab fa-react tech-icons"></i>
+            </span></span>
             <br/>
         <br/>
         <br/>
-            Description:  <span> This is an dynamic News webapp i have used news api to fetch data in website  .I used complete react to built thi webapp </span>
+        <span> This is an dynamic News webapp i have used news api to fetch data in website  .I used complete react to built thi webapp </span>
          </div>
         </div>
           <div class="content">
@@ -160,36 +167,21 @@
             <a href="https://6253e5b1d01d8529acd59b4c--wonderful-piroshki-1e7f60.netlify.app/" class="btn" target="_blank">show Live</a>
           </div>
         </div>
-        <div class="box tilt">
-          <div class="pro-box">
-          <img src="Images/img-3.png" alt="">
-          <div class="p-content" style="padding-left:3%;">Project Name: <span>Digital agency UI </span>
-            <br/>
-            <br/>
-            <br/>
-            Tech stack: <span> Html,Css,Bootstrap</span>
-        <br/>
-        <br/>
-            Description:  <span> This is an Static Digital marketing agency website it is an individual project made by me .I used Html  Css and bootstrap to build this website ,the concepts that were covered while building this website are Responsive design using bootstrap and display flex</span>
-         </div>
-        </div>
-          <div class="content">
-            <a href="#" class="btn" target="_blank">show code</a>
-            <a href="https://github.com/jaydeep2311/news" class="btn" target="_blank">show Live</a>
-          </div>
-        </div>
+        
         <div class="box tilt">
           <div class="pro-box">
           <img src="Images/img-4.png" alt="">
-          <div class="p-content">Project Name: <span> Traveller webapp UI</span>
+          <div class="p-content"><span> Traveller webapp UI</span>
             <br/>
             <br/>
             <br/>
-            Tech stack: <span> Html,Css</span>
+          <span> <span ><i class="fab fa-html5 tech-icons"></i>
+            <i class="fab fa-css3-alt tech-icons"></i>
+          </span> </span>
             <br/>
         <br/>
         <br/>
-            Description:  <span> This is an Static traveller website .I used Html and plain Css to build this website ,the concepts that were covered while building this website are display flex,Responsive design and Media queries </span>
+    <span> This is an Static traveller website .I used Html and plain Css to build this website ,the concepts that were covered while building this website are display flex,Responsive design and Media queries </span>
          </div>
         </div>
         
