--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>jaydeeps portfolio</title>
+    <link rel="icon" href="https://image.freepik.com/free-icon/j-capital-letter-in-a-circle_318-9835.jpg">
     <!--Font awesome cdn-->
     <link
       rel="stylesheet"
@@ -35,7 +36,7 @@
     <section id="home" class="home">
       <div id="particles-js"></div>
       <div class="content">
-        <img src="./Images/WhatsApp Image 2022-04-13 at 1.28.31 PM.jpeg" alt="" class="tilt" />
+        <img src="./Images/WhatsApp Image 2022-04-14 at 3.21.27 PM.jpeg" alt="" class="tilt" />
 
         <h3>Khatri <span>Jaydeep</span></h3>
         <p>I am a <span class="typingtext">Full Stack Web developer</span></p>
@@ -195,6 +196,7 @@
     <!--project section ends here-->
     <!--Contact Me section starts here -->
     <section class="contact" id="contact">
+      <h1 class="heading"><span>Contact</span></h1>
       <div class="row">
         <div class="image">
         <img src="Images/contact-img.svg" alt="" class="img-contact tilt">
@@ -212,7 +214,15 @@
               <input type="submit" name="" id="" class="btn" value="send message">
             </form>
           </div>
-     
+          <div class="contact-icons">
+                <a href="https://www.linkedin.com/in/jaydeep-khatri-b75887206/" target="_blank" rel="noopener noreferrer" class="con-icons"> <i class="fab fa-linkedin tech-icons"></i></a>
+                <a href="https://github.com/jaydeep2311" target="_blank" rel="noopener noreferrer" class="con-icons"><i class="fab fa-github tech-icons"></i></a> 
+                <a href="mailto: jaydeep.khatri23@gmail.com" target="_blank" rel="noopener noreferrer" class="con-icons"><i class="far fa-envelope tech-icons"></i></a>            
+              </div>
+              <div class="address contact-icons">
+                <p>Mobile no:- <span>    7046116068</span></p>
+                <p>Address:- <span>Randhesan Gandhinagar Gujarat</span></p>
+              </div>
       </div>
     </section>
     <!--Contact me section ends here -->
