--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="home" class="home">
       <div id="particles-js"></div>
       <div class="content">
-        <img src="./Images/WhatsApp Image 2022-04-14 at 3.21.27 PM.jpeg" alt="" class="tilt" />
+        <img src="Images/WhatsApp Image 2022-04-14 at 6.44.49 PM.jpeg" alt="" class="tilt" />
 
         <h3>Khatri <span>Jaydeep</span></h3>
         <p>I am a <span class="typingtext">Full Stack Web developer</span></p>
